--- a/user-input-with-forms/studio/index.html
+++ b/user-input-with-forms/studio/index.html
@@ -3,17 +3,33 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
-    });
+		let actions = {
+			google: "https://www.google.com/search",
+			duckDuckGo: "https://duckduckgo.com/",
+			bing: "https://www.bing.com/search",
+			ask: "https://www.ask.com/web"
+		}
+		function setSearchEngine() {
+			let form = document.querySelector("#searchForm");
+			let engine = document.querySelector("input[name=engine]:checked");
+
+			form.setAttribute("action", actions[engine.value])
+		}
+		window.addEventListener("load", function(){
+			document.querySelector("#searchForm").addEventListener("submit", setSearchEngine)
+		});
 	</script>
 </head>
 
 <body>
 
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
+    <input type="text" name="q">
+	<label><input type="radio" name="engine" value="google"> Google </label>
+	<label><input type="radio" name="engine" value="duckDuckGo"> DuckDuckGo </label>
+	<label><input type="radio" name="engine" value="bing"> Bing </label>
+	<label><input type="radio" name="engine" value="ask"> Ask </label>
+	<button value="Go!">Go!</button>
 	</form>
 
 </body>
